// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extract headings build markdown text should match snapshot 1`] = `
"1. [[#foo]]
	1. [[#bar]]
		1. [[#baz]]
			1. [[#Something Alt Text|Alt Text]]
1. [[#level 1]]
	1. [[#level 1 a]]"
`;

exports[`Extract headings build markdown text should match snapshot when varied_style is true and style is bullet 1`] = `
"- [[#foo]]
	1. [[#bar]]
		1. [[#baz]]
			1. [[#Something Alt Text|Alt Text]]
- [[#level 1]]
	1. [[#level 1 a]]"
`;

exports[`Extract headings build markdown text should match snapshot when varied_style is true and style is number 1`] = `
"1. [[#foo]]
	- [[#bar]]
		- [[#baz]]
			- [[#Something Alt Text|Alt Text]]
1. [[#level 1]]
	- [[#level 1 a]]"
`;

exports[`Extract headings build markdown text should match snapshot with inconsistent heading levels 1`] = `
"1. [[#Level 2]]
	1. [[#Level 4]]
1. [[#Level 2]]
	1. [[#Level 3]]"
`;

exports[`Extract headings build markdown text should match snapshot with title 1`] = `
"## Table of Contents
1. [[#foo]]
	1. [[#bar]]
		1. [[#baz]]
			1. [[#Something Alt Text|Alt Text]]
1. [[#level 1]]
	1. [[#level 1 a]]"
`;
